refactor input system